--- a/hotdeal/pom.xml
+++ b/hotdeal/pom.xml
@@ -54,6 +54,13 @@
 			<version>1.2</version>
 		</dependency>
 		
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.14.2</version>
+		</dependency>
+		
 		<!-- MySQL -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 		<dependency>
